Fix issue browsing target references.
